fix overflow scroll

--- a/src/index.css
+++ b/src/index.css
@@ -18,10 +18,6 @@ body {
   --c-links: #9d789a;
 }
 
-#root {
-  height: 100%;
-}
-
 a {
   color: var(--c-links);
 }
